V2: 多云平台接入 — 阿里云+火山云同库存采集
Phase 1-3 全部完成，Phase 4 代码就绪待联调

## 新增
- CloudCollector 统一接口（4方法）
- AliyunCollector 委托包装（不改原Collector）
- AliyunApiAction / VolcengineApiAction 常量类
- VolcengineCollector 真实SDK调用（已替换占位类型）
- VolcengineConfig 配置绑定
- CloudProviderVerificationTest 集成测试（5用例）

## 修改
- Entity层: +cloudProvider字段 + @Builder.Default + @UniqueConstraint
- Repository/Service: 按cloudProvider查询方法
- CollectScheduler: 遍历List<CloudCollector>，操作级隔离try/catch
- AlarmDetector: 按云检测余额，冷却用(ruleId+provider)去重
- Dashboard/DataQuery: 所有端点支持?cloudProvider=筛选
- AliyunConfig: +collectorEnabled 采集开关
- pom.xml: SDK分模块依赖(core/billing/ecs/rdsmysqlv2)

## 修复
- Stream.peek() → Stream.map()
- ResourceService.saveOrUpdate 并发冲突兜底
- Dashboard ExpiringResource DTO 缺cloudProvider字段
- CollectScheduler 三操作独立隔离

## SDK坐标修正
原文档 com.volcengine:volcengine-java-sdk:2.0.5 不存在，实际为4个独立artifact